# Proyecto_Machine_Learning

./: Dockerfile  README.md  pyproject.toml  requirements.txt
notebooks/: 2_Modelo_ Clasificación_radiacion.ipynb  3_Serie_temporal_energia.ipynb  4_Modelo_regresion_lineal_Temp_amb.ipynb  5_Modelo_regresion_lineal_Energia.ipynb  6_Modelo_random_forest_Temp_amb.ipynb  Machine_Learning.ipynb
src/utils/: Funciones.ipynb
